2011-10-24  Ivan Briano  <ivan@profusion.mobi>

        [EFL] Build fix. Add include path to find npapi.h
        https://bugs.webkit.org/show_bug.cgi?id=70730

        Unreviewed build fix.

        * DumpRenderTree/efl/CMakeLists.txt: Add include path for npapi.h

2011-10-24  Eric Seidel  <eric@webkit.org>

        Plugin tests are failing after switching WK2 to NRWT
        https://bugs.webkit.org/show_bug.cgi?id=70760

        Reviewed by Simon Fraser.

        Perpetuate this horrible hack.

        * Scripts/webkitpy/layout_tests/port/webkit.py:

2011-10-24  Eric Seidel  <eric@webkit.org>

        NRWT doesn't support ORWT's --root option, but should
        https://bugs.webkit.org/show_bug.cgi?id=70416

        Reviewed by Dirk Pranke.

        Add support for ORWT's --root option which is used for
        running tests with a nightly build of WebKit.

        * Scripts/old-run-webkit-tests:
        * Scripts/webkitpy/layout_tests/port/base.py:
         - webkit_build_path was never called by any code, removed.
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-10-24  David Levin  <levin@chromium.org>

        check-webkit-style complains about WEBKIT_EXPORT in test/WebUnitTests.h
        https://bugs.webkit.org/show_bug.cgi?id=70747

        Reviewed by Tony Chang.

        * Scripts/webkitpy/style/checkers/cpp.py: Allow WEBKIT_EXPORT in tests dir.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Corresponding test.

2011-10-24  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt][WK2] Crash when running pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=70725

        Reviewed by Chang Shu.

        * WebKitTestRunner/qt/TestInvocationQt.cpp:
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):

2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove g_thread_init() calls
        https://bugs.webkit.org/show_bug.cgi?id=70717
